--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/product-service
-spring.datasource.username=user
-spring.datasource.password=password
+# Common properties for all environments
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Set 'dev' as the default profile for local development
+# For production, this will be overridden by an environment variable
+spring.profiles.active=dev
