--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,11 @@ jobs:
       run: |
         aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }} --query taskDefinition > task-definition.json
 
+    - name: Remove unsupported enableFaultInjection key
+      run: |
+        jq 'del(.enableFaultInjection)' task-definition.json > clean-task-definition.json
+        mv clean-task-definition.json task-definition.json    
+
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
