Adding integration tests to the code

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: Run tests
+      run: ./gradlew test
+
     - name: Build with Gradle
       run: ./gradlew build
 
