--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,9 +33,6 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Run tests
-      run: ./gradlew test
-
     - name: Build with Gradle
       run: ./gradlew build
 
@@ -57,7 +54,7 @@ jobs:
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build the Docker image
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --mount=type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock .
         # Push the image to ECR
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
